--- a/src/components/atom/carousel/carousel.css
+++ b/src/components/atom/carousel/carousel.css
@@ -11,7 +11,6 @@
 
 .MuiLinearProgress-bar {
     background-color: #479d39;
-    margin: auto;
     width: 100%;
 }
 
@@ -19,6 +18,7 @@
     background-color: #00000000;
     justify-content: center;
     align-content: center;
+    margin: 0.5rem auto auto;
 }
 
 .MuiPaper-elevation0 {
