--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,8 +1,8 @@
 .projects-container {
-    width: 75vw;
-    height: 95vh;
+    width: 95vw;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     /*border: #479d39 dashed 2px;*/
-    margin: 7rem auto auto;
+    margin: auto;
 }
