--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,16 +1,36 @@
 .about-container {
-    width: 75vw;
-    height: 95vh;
-    margin: 7rem auto auto;
+    width: 95vw;
+    height: 90vh;
+    margin: auto;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
     justify-content: space-evenly;
     align-items: center;
     color: #479d39;
+    font-size: 1.5rem;
     /*border: #479d39 dashed 2px;*/
 }
 
 .about {
-    font-size: 2rem;
     /*width: 75%;*/
-    border: #479d39 dashed 2px;
+    /*border: #479d39 dashed 2px;*/
     padding: 1rem;
+}
+
+.heading {
+    text-decoration: #479d39 underline 2px dashed;
+    text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    .about-container {
+        font-size: 1.5rem !important;
+    }
+}
+
+@media only screen and (max-height: 800px) {
+    .about-container {
+        margin-top: 10rem !important;
+        margin-bottom: 13rem !important;
+    }
 }
